<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioNews">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:columnCount="3"
        app:rowCount="4">

        <Button
            android:id="@+id/btn_dia_antes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorYellow"
            android:text="@string/Boton_Antes"
            tools:text="@string/Boton_Antes"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_gravity="fill"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button

            android:id="@+id/btn_dia"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorYellow"
            android:text="@string/Boton_Dia"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn_dia_despues"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorYellow"
            android:text="@string/Boton_Despues"
            app:layout_gravity="fill"
            app:layout_column="2"
            app:layout_row="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn_mes_antes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorYellow"
            android:text="@string/Boton_Antes"
            tools:text="@string/Boton_Antes"
            app:layout_gravity="fill"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn_mes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorYellow"
            android:text="@string/Boton_Mes"
            app:layout_gravity="fill"
            app:layout_column="1"
            app:layout_row="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn_mes_despues"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorYellow"
            android:text="@string/Boton_Despues"
            app:layout_gravity="fill"
            app:layout_column="2"
            app:layout_row="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>


        <Button
            android:id="@+id/btn_year_antes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorYellow"
            android:text="@string/Boton_Antes"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn_year"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorYellow"
            android:text="@string/Boton_Year"
            app:layout_gravity="fill"
            app:layout_column="1"
            app:layout_row="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn_year_despues"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorYellow"
            android:text="@string/Boton_Despues"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn_escuchar_noticias"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorBlue"
            android:text="@string/Boton_Escuchar_Noticias"
            app:layout_gravity="fill"
            app:layout_column="2"
            app:layout_row="3"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn_volver_audio_news_activity"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorBlue"
            android:text="@string/Boton_Volver"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>


    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>